add information about blog post

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>I misunderstood LeetCode: Learn from my experience</h2>
+          <p>I discuss what I learned while completing 50 LeetCode practice problems over winter break.</p>
+          <a href="https://medium.com/@erickauppi43/i-misunderstood-leetcode-learn-from-my-experience-7181eff67456" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
