add more text content to page

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>You missed out on Kid Icarus: Uprising</h2>
+          <p>An overview of what makes Kid Icarus: Uprising one of my favorite video games of all time.</p>
+          <a href="https://www.youtube.com/" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <h2>The Willy Wonka event disaster</h2>
+          <p>We investigate a supposedly magical Willy Wonka experience that didn't live up to the promises of its AI-generated advertisements.</p>
+          <a href="https://soundcloud.com/eric-machine/willy-wonka-event-disaster" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://www.linkedin.com/in/eric-kauppi/" class="button" target="_blank">LinkedIn</a>
     </div>
 
   </div>
