Add video information and alt text

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/cat.jpg" alt="Photo by Art Hauntington">
+      <img src="images/cat.jpg" alt="A photo of a black cat sitting in a bed">
     </div>
     <div class="intro">
-      I'm <span class="name"><strong>Eric Kauppi</strong></span>, a computer science student who enjoys working with Linux and listening to music.
+      I'm <span class="name"><strong>Eric Kauppi</strong></span>, a computer science major who enjoys working with Linux, listening to music, and juggling.
     </div>
     <div class="section-header">
       <h1>My work</h1>
@@ -32,7 +32,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>I misunderstood LeetCode: Learn from my experience</h2>
-          <p>I discuss what I learned while completing 50 LeetCode practice problems over winter break.</p>
+          <p>I discuss what I learned while completing 50 LeetCode practice problems over my winter break.</p>
           <a href="https://medium.com/@erickauppi43/i-misunderstood-leetcode-learn-from-my-experience-7181eff67456" class="external-link" target="_blank">Read</a>
         </div>
       </div>
@@ -40,9 +40,9 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>You missed out on Kid Icarus: Uprising</h2>
-          <p>An overview of what makes Kid Icarus: Uprising one of my favorite video games of all time.</p>
-          <a href="https://www.youtube.com/" class="external-link" target="_blank">Watch</a>
+          <h2>Regarding Urban "Planning"</h2>
+          <p>A somewhat sarcastic public service announcement criticizing the design of urban and suburban spaces within the United States.</p>
+          <a href="https://www.youtube.com/watch?v=6y-uflTL7BY" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
