fix button hover and footer

--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
 
   </div>
   <div class="footer">
-    <p>Website and images © Eric Kauppi, 2024.</p>
-    <p>Based on a design by <a
-        href="https://www.w3schools.com/howto/howto_website_create_linktree.asp" target="_blank">w3schools</a>.
-    </p>
+    <div class="footer-paras">
+      <p>Website and images © Eric Kauppi, 2024.</p>
+      <p>Based on a design by <a
+          href="https://www.w3schools.com/howto/howto_website_create_linktree.asp" target="_blank">w3schools</a>.
+      </p>
+    </div>
   </div>
   <script type="text/javascript" src="js/slider.js"></script>
 </body>
